eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
<<<<<<< HEAD
  ingressClassName: nginx
=======
>>>>>>> 4865859e2d60c52427a4ca9377f7300a40ea8962
  rules:
  - host: "api.simplebanktoday.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.simplebanktoday.com
    secretName: simple-bank-api-cert
